--- a/utmb-lottery-stats-2020.ipynb
+++ b/utmb-lottery-stats-2020.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "freq       10576     102        467    11398   12326       12322    23264"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "Name: race_name, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,71 +137,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'CCC®  : 2557 / 10576 =  24% chance'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'UTMB® : 2834 / 10124 =  28% chance'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'OCC   : 1892 /  9255 =  20% chance'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'TDS®  : 2254 /  2683 =  84% chance'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'MCC   :  973 /   973 = 100% chance'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'PTL®  :  318 /   481 =  66% chance'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'YCC   :  183 /   183 = 100% chance'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CCC®  : 2557 / 10576 =  24% chance\n",
+      "UTMB® : 2834 / 10124 =  28% chance\n",
+      "OCC   : 1892 /  9255 =  20% chance\n",
+      "TDS®  : 2254 /  2683 =  84% chance\n",
+      "MCC   :  973 /   973 = 100% chance\n",
+      "PTL®  :  318 /   481 =  66% chance\n",
+      "YCC   :  183 /   183 = 100% chance\n"
+     ]
     }
    ],
    "source": [
